[package]
name = "collatz_conjecture"
version = "0.1.0"
edition = "2018"


[dependencies]
num-bigint = "0.4"
num-iter = "0.1.42"
num-integer = "0.1.44"
num-traits = "0.2.14"
mimalloc = { version = "*", default-features = false }
parking_lot = "0.11.2"
rayon = "1.5.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
